--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,22 @@
 /*////////////// Fonts //////////////*/
 
 /* link the web font used for the level 1 heading here */
-
+h1 {
+	font-family: "baskerville", serif;
+	src: <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:700" rel="stylesheet">;
+	font-size: 5em;
+	font-weight: bold;
+	color: rgb(152, 173, 166);
+	padding-bottom: 10px;
+	border-bottom: 1px solid #ccc;
+	margin: 0 0 5px;
+	}
 /*////////// Global Styles //////////*/
 
 body {
 	background: #F3EBE9;
 	font-size: 100%;
-	font-family: 'Times New Roman', serif; 
+	font-family: 'Times New Roman', serif;
 }
 
 .wrapper {
@@ -15,6 +24,9 @@ body {
 	margin: 0 auto;
 	background: #fff;
 	padding: 0 45px 20px;
+}
+ img {
+	border: 5px rgb(152, 173, 166) solid;
 }
 
 /* Write all remaining styles here */
