--- a/css/style.css
+++ b/css/style.css
@@ -29,4 +29,9 @@ body {
 	border: 5px rgb(152, 173, 166) solid;
 }
 
+ h2 {
+   color: rgb(111,127,122);
+   font-size: 2em;
+ }
+
 /* Write all remaining styles here */
