automatically backed up by learn

--- a/css/style.css
+++ b/css/style.css
@@ -34,4 +34,8 @@ body {
    font-size: 2em;
  }
 
+ #press img {
+   border: 5px rgb(152, 173, 166) solid;
+ }
+
 /* Write all remaining styles here */
