automatically backed up by learn

--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ body {
  }
 
  #press img {
-   border: 5px rgb(152, 173, 166) solid;
+   border: 5px #ccc solid;
  }
 
 /* Write all remaining styles here */
