--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,12 @@ body {
    font-size: .08em;
    color: #555;
    margin: 0 0 20px 0;
+   display: block;
+  -webkit-margin-before: 1em;
+  -webkit-margin-after: 1em;
+  -webkit-margin-start: 0px;
+  -webkit-margin-end: 0px
  }
+
 
 /* Write all remaining styles here */
